# serializer version: 1
# name: test_update_workflows_fields[False]
  list([
    dict({
      '_id': 'test_id',
      'library_type': 'normal',
      'nuvs': 'ip',
      'pathoscope': 'ip',
      'workflows': dict({
        'aodp': 'incompatible',
        'iimi': 'none',
        'nuvs': 'pending',
        'pathoscope': 'pending',
      }),
    }),
  ])
# ---
# name: test_update_workflows_fields[True]
  list([
    dict({
      '_id': 'test_id',
      'library_type': 'normal',
      'nuvs': 'ip',
      'pathoscope': True,
      'workflows': dict({
        'aodp': 'incompatible',
        'iimi': 'none',
        'nuvs': 'pending',
        'pathoscope': 'complete',
      }),
    }),
  ])
# ---
